# video-search

./: .editorconfig  .env  .gitignore  .pre-commit-config.yaml  README.md  TODO.md  api.md  docker-compose-gpu-worker.yml  docker-compose.dev.yml  docker-compose.gpu-worker.dev.yml  docker-compose.local.example.yml  docker-compose.yml  setup.cfg
api/: Dockerfile  Pipfile  app.py  db.py  models.py
backend/: .env  Dockerfile  Dockerfile.GPU  app.py  cbz.py  filehash.py  indexing.py  models.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.fish  settings.py  utils.py
backend/api/: Dockerfile  Pipfile  app.py  db.py  models.py  pyproject.toml
backend/backend/: app.py  dramatiq_extensions.py  filehash.py  indexing.py  models.py  scheduler.py  settings.py  tagging.py  thumbnail.py  utils.py  video_reader.py
backend/backend/api/: app.py  db.py
backend/backend/classifiers/: __init__.py  abstractclassifier.py  catalog.py  efficientnet.py  prediction.py  vit.py
backend/backend/tagging/: __init__.py  perframe.py
backend/backend/tasks/: __init__.py  default.py  ml.py  periodic.py  settings.py
backend/backend/video_indexer/: indexer.py  main.py  watcher.py
backend/classifiers/: abstractclassifier.py  efficientnet.py  prediction.py  vit.py
backend/img_tagger/: Dockerfile  Pipfile  add_test_image_job.py  constants_test.py  main.py  mocks.py  pyproject.toml  server.py  tag_processing.py  tagger.py  test_tagger.py
backend/scripts/: beit_test.py  benchmark_classifiers.py  cbz.py  extract_keyframes.py  fake_data.py  indexing_create.py  indexing_playground.py  indexing_playground_vit.py  indexing_show.py  indexing_small.py  indexing_vit.py  indexing_vit2.py  indexing_wip.py  segmentation2.py  video2cbz.py  wip_indexing.py
backend/shared/: __init__.py
backend/video_indexer/: Dockerfile  Pipfile  indexer.py  main.py  pyproject.toml  watcher.py
benchmarks/: img_json.py
client/: .env  Dockerfile  package-lock.json  package.json
client/.husky/: pre-commit
client/src/: App.tsx  LinkButton.tsx  index.tsx
client/src/components/: DownloadButton.tsx  ListItemButton.tsx  SearchBar.tsx  SearchView.tsx  Title.tsx  VideoListWithFiltering.tsx
client/src/lib/: types.ts  utils.js  utils.ts
client/src/routes/: devtools.tsx  root.tsx  search-by-image.tsx  search-by-tag.tsx  search-by-tags.tsx  settings.tsx  status.tsx  videos.tsx
img_tagger/: .pyre_configuration  Dockerfile  Pipfile  add_test_image_job.py  constants_test.py  main.py  server.py  shared.py  tag.py  tag_format.py  tag_processing.py  tagger.py  test_tagger.py
shared/: __init__.py
video_indexer/: indexer.py  main.py  watcher.py
