[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Miroslav Hrabal <mhn@email.cz>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.3"
pymongo = "^4.0.2"

[tool.poetry.group.dev.dependencies]
pylint = "^2.13.8"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pytest = "^7.1.0"
autopep8 = "^1.6.0"
ipython = "^8.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
