
[tool.poetry]
name = "img-tagger"
version = "0.1.0"
description = ""
authors = ["Miroslav Hrabal <mhn@email.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
tensorflow = "^2.8.0"
pika = "^1.2.0"
Pillow = "^9.0.1"
bson = "^0.5.10"
lz4 = "^4.0.0"
av = "^9.2.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^4.0.1"
autopep8 = "^1.6.0"
black = "^22.1.0"
pytest = "^7.1.0"
ipython = "^8.1.1"
isort = "^5.10.1"
mypy = "^0.941"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
